# netclam

./: .gitignore  README.md
.github/workflows/: python-publish.yml
deploy/: longhorn-storage-class.yaml  netclam-cp-api-statefulset.yaml  netclam-results-pvc.yaml
deploy/mysql/: mysql-configmap.yml
netclam-cp/: .coveragerc  Dockerfile  pyproject.toml
netclam-cp/config/: base.conf
netclam-cp/deploy/: netclam-cp-api-service.yml  netclam-data-pvc.yaml  netclam-secret.yaml
netclam-cp/deploy/mysql/: mysql-secret.yaml  mysql-service.yml  mysql-statefulset.yml
netclam-cp/netclam_cp/: __init__.py  main.py
netclam-cp/netclam_cp/config/: __init__.py
netclam-cp/netclam_cp/handlers/: database.py  uploads.py
netclam-cp/tests/: test_main.py
netclam-cp/tests/handler/: test_upload_handler.py
netclam-cp/tests/resources/: test_upload.txt
netclam-dp/: pyproject.toml
