[tool.poetry]
name = "netclam-cp"
version = "0.1.0"
description = ""
authors = ["Dana Garcia <dana_sean_garcia@live.com>"]
readme = "README.md"
packages = [{include = "netclam_cp"}]

[tool.poetry.dependencies]
python = "^3.9"
prometheus-fastapi-instrumentator = "^6.1.0"
uvicorn = "^0.23.2"
fastapi = "^0.101.1"
python-multipart = "^0.0.6"
netclam-common = "^0.1.1"
dataclasses-serialization = "^1.3.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
