[tool.poetry]
name = "netclam-dp"
version = "0.1.0"
description = ""
authors = ["Dana Garcia <dana_sean_garcia@live.com>"]
readme = "README.md"
packages = [{include = "netclam_dp"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
